Armo build.gradle