@@ -10,22 +10,6 @@ repositories {
 }
 
 dependencies {
-   /* implementation 'org.hildan.chrome:chrome-devtools-kotlin:1.4.0-881010'
-    //implementation 'io.fluidsonic.pdf:fluid-pdf:0.17.0'
-    //implementation 'io.fluidsonic.pdf:fluid-pdf-jvm:0.17.0'
-
-    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.11.1'
-    implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.11.1'
-    testImplementation group: 'io.cucumber', name: 'cucumber-picocontainer', version: '7.11.1'
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.1'
-    testImplementation('io.github.bonigarcia:webdrivermanager:5.3.2')
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.5'
-    implementation group: 'tech.grasshopper', name: 'extentreports-cucumber7-adapter', version: '1.10.1'
-    implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.9'
-    implementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.9.2'
-    implementation 'org.apache.logging.log4j:log4j-core:2.16.0'*/
-
     implementation 'junit:junit:4.13.2'
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.1')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.1')
@@ -39,10 +23,25 @@ dependencies {
     implementation group: 'tech.grasshopper', name: 'extentreports-cucumber7-adapter', version: '1.9.2'
     implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.9'
     implementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.9.1'
-
-
+}
+configurations {
+    cucumberRuntime{
+        extendsFrom testImplementation
+    }
 }
 
+def tags= (findProperty('tags') == null) ? 'not @Ignore' : findProperty('tags') + ' and not @Ignore'
+
 test {
+   // jvmArgs '--enable-preview'
     useJUnitPlatform()
+}
+task runWithCucumber(type: JavaExec ) {
+    main = "io.cucumber.core.cli.Main"
+    classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+    args = [
+            '--glue', 'steps',
+            'src/test/resources/features',
+            '--tags', "${tags}"
+    ]
 }
